// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypographyPreset renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders responsive override editorialParagraph010 for xs and editorialParagraph030 for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 14px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders responsive override editorialParagraph010 for xs, editorialParagraph020 for sm, and editorialParagraph030 for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 14px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders responsive override editorialParagraph010 for xs, editorialParagraph020 for sm, and wrong for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 14px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders responsive override editorialParagraph010 for xs, editorialParagraph020 for sm, editorialParagraph030 for md, editorialHeading010 for lg and xl breakpoints and ignore wrong prop 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 14px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders with fontSmooth and fontStretch 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  font-smooth: always;
  font-stretch: condensed;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders with override editorialParagraph010 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset when withCrop is true & cropping functions work with fontMetrics 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Custom-FontName",sans-serif;
  font-size: 18px;
  line-height: 27px;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset when withCrop is true but such font does not exist renders standard text 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: Non-existent-font-family,serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: -0.5px;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset when withCrop is true renders cropped text 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 18px;
  line-height: 27px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;
